Fix: Remove specific game count references and reduce header spacing

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                     Epic Game Collection
                 </h1>
                 <p class="hero-description-simple lead mb-4 text-muted">
-                    4 carefully selected popular games, no download required - click and play instantly
+                    Carefully selected popular games, no download required - click and play instantly
                 </p>
                 <div class="hero-quick-stats">
-                    <span class="quick-stat">🎯 4 Epic Games</span>
+                    <span class="quick-stat">🎯 Epic Games</span>
                     <span class="quick-stat">🆓 Completely Free</span>
                     <span class="quick-stat">⚡ Instant Play</span>
                 </div>
@@ -417,7 +417,7 @@
                     <div class="footer-stats">
                         <div class="stat-item">
                             <span class="stat-number">4+</span>
-                            <span class="stat-label">Curated Games</span>
+                            <span class="stat-label">Quality Games</span>
                         </div>
                         <div class="stat-item">
                             <span class="stat-number">100%</span>
