SEO优化：添加游戏分类页面和改进导航结构 - 创建categories.html分类页面，提供清晰的游戏分类导航 - 添加分类页面专用CSS样式，包含响应式设计 - 更新所有页面导航菜单，添加Categories链接 - 在sitemap.xml中添加分类页面 - 使用语义化URL结构和面包屑导航

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                         <a class="nav-link active fw-medium" href="/" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link fw-medium" href="/categories.html">Categories</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link fw-medium" href="/about.html">About</a>
                     </li>
                 </ul>
