--- a/about.html
+++ b/about.html
@@ -49,6 +49,9 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/categories.html">Categories</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="/about.html" aria-current="page">About</a>
                     </li>
                 </ul>
