修复分类页面导航栏间隙问题：调整面包屑部分的上边距

--- a/categories.html
+++ b/categories.html
@@ -101,7 +101,7 @@
     </nav>
 
     <!-- Breadcrumb -->
-    <section class="breadcrumb-section bg-light py-3 mt-5">
+    <section class="breadcrumb-section bg-light py-3" style="margin-top: 76px;">
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-0">
