--- a/categories.html
+++ b/categories.html
@@ -101,7 +101,7 @@
     </nav>
 
     <!-- Breadcrumb -->
-    <section class="breadcrumb-section bg-light py-3" style="margin-top: 76px;">
+    <section class="breadcrumb-section bg-light py-2" style="margin-top: 76px;">
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-0">
@@ -113,7 +113,7 @@
     </section>
 
     <!-- Categories Header -->
-    <section class="hero-section-simple">
+    <section class="hero-section-simple" style="margin-top: 0;">
         <div class="container">
             <div class="hero-content-simple text-center py-5">
                 <div class="hero-badge mb-3">
