移除分类页面面包屑的上边距，消除导航栏间隙

--- a/categories.html
+++ b/categories.html
@@ -101,7 +101,7 @@
     </nav>
 
     <!-- Breadcrumb -->
-    <section class="breadcrumb-section bg-light py-2" style="margin-top: 76px;">
+    <section class="breadcrumb-section bg-light py-2">
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-0">
