--- a/categories.html
+++ b/categories.html
@@ -160,8 +160,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/categories/sports.html" class="btn btn-primary w-100">
-                                <span>Browse Sports Games</span>
+                            <a href="/games/epic-basketball.html" class="btn btn-primary w-100">
+                                <span>Play Epic Basketball</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
@@ -193,8 +193,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/categories/puzzle.html" class="btn btn-primary w-100">
-                                <span>Browse Puzzle Games</span>
+                            <a href="/games/thief-puzzle.html" class="btn btn-primary w-100">
+                                <span>Play Thief Puzzle</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
@@ -226,8 +226,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/categories/racing.html" class="btn btn-primary w-100">
-                                <span>Browse Racing Games</span>
+                            <a href="/games/ultimate-moto.html" class="btn btn-primary w-100">
+                                <span>Play Ultimate Moto</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
@@ -259,8 +259,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/categories/action.html" class="btn btn-primary w-100">
-                                <span>Browse Action Games</span>
+                            <a href="/games/kick-the-pirate.html" class="btn btn-primary w-100">
+                                <span>Play Kick the Pirate</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
@@ -298,10 +298,10 @@
                         <div class="col-md-6 mb-3">
                             <h6 class="footer-title">Game Categories</h6>
                             <ul class="footer-links">
-                                <li><a href="/categories/sports.html">Sports Games</a></li>
-                                <li><a href="/categories/puzzle.html">Puzzle Games</a></li>
-                                <li><a href="/categories/racing.html">Racing Games</a></li>
-                                <li><a href="/categories/action.html">Action Games</a></li>
+                                <li><a href="/games/epic-basketball.html">Sports Games</a></li>
+                                <li><a href="/games/thief-puzzle.html">Puzzle Games</a></li>
+                                <li><a href="/games/ultimate-moto.html">Racing Games</a></li>
+                                <li><a href="/games/kick-the-pirate.html">Action Games</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6 mb-3">
