创建分类详情页面系统 - 实现更好的用户导航体验

--- a/categories.html
+++ b/categories.html
@@ -160,8 +160,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/games/epic-basketball.html" class="btn btn-primary w-100">
-                                <span>Play Epic Basketball</span>
+                            <a href="/categories/sports.html" class="btn btn-primary w-100">
+                                <span>Browse Sports Games</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
@@ -193,8 +193,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/games/thief-puzzle.html" class="btn btn-primary w-100">
-                                <span>Play Thief Puzzle</span>
+                            <a href="/categories/puzzle.html" class="btn btn-primary w-100">
+                                <span>Browse Puzzle Games</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
@@ -226,8 +226,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/games/ultimate-moto.html" class="btn btn-primary w-100">
-                                <span>Play Ultimate Moto</span>
+                            <a href="/categories/racing.html" class="btn btn-primary w-100">
+                                <span>Browse Racing Games</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
@@ -259,8 +259,8 @@
                             </div>
                         </div>
                         <div class="category-footer">
-                            <a href="/games/kick-the-pirate.html" class="btn btn-primary w-100">
-                                <span>Play Kick the Pirate</span>
+                            <a href="/categories/action.html" class="btn btn-primary w-100">
+                                <span>Browse Action Games</span>
                                 <span class="ms-2">→</span>
                             </a>
                         </div>
